--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Go For It | Find Sport Near You</title>
+<style>
+
+    body {
+
+      font-family: "Segoe UI", Arial, sans-serif;
+
+      background: #f2f4f6;
+
+      color: #222;
+
+      margin: 0;
+
+      padding: 40px;
+
+    }
+
+    .container {
+
+      max-width: 900px;
+
+      margin: auto;
+
+    }
+
+    h1 {
+
+      text-align: center;
+
+      margin-bottom: 10px;
+
+    }
+
+    .intro {
+
+      text-align: center;
+
+      max-width: 600px;
+
+      margin: 0 auto 40px;
+
+      font-size: 16px;
+
+    }
+
+    h2 {
+
+      margin-bottom: 20px;
+
+    }
+
+    .areas {
+
+      display: grid;
+
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+
+      gap: 20px;
+
+    }
+
+    .area-box {
+
+      background: white;
+
+      padding: 25px;
+
+      border-radius: 12px;
+
+      text-align: center;
+
+      text-decoration: none;
+
+      color: #222;
+
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+
+      transition: transform 0.2s, box-shadow 0.2s;
+
+    }
+
+    .area-box:hover {
+
+      transform: translateY(-4px);
+
+      box-shadow: 0 6px 14px rgba(0,0,0,0.12);
+
+    }
+</style>
+</head>
+<body>
+<div class="container">
+<h1>Go For It</h1>
+<p class="intro">
+
+      Find sports clubs and facilities in your local area.  
+
+      Choose a district below to see what’s available near you.
+</p>
+<h2>Your Area</h2>
+<div class="areas">
+<a href="area.html" class="area-box">Glasgow City Centre</a>
+<a href="area.html" class="area-box">Glasgow West End</a>
+<a href="area.html" class="area-box">Glasgow East End</a>
+<a href="area.html" class="area-box">Glasgow South Side</a>
+<a href="area.html" class="area-box">Glasgow North</a>
+</div>
+</div>
+</body>
+</html>
+ 
