--- a/south-side.html
+++ b/south-side.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Glasgow East-End | Go For It</title>
+<style>
+   body {
+     font-family: "Segoe UI", Arial, sans-serif;
+     background: #eef1f4;
+     padding: 40px;
+   }
+   .container {
+     max-width: 900px;
+     margin: auto;
+   }
+   iframe {
+     width: 100%;
+     height: 320px;
+     border-radius: 12px;
+     border: none;
+     margin-bottom: 30px;
+   }
+   .club {
+     background: white;
+     padding: 20px;
+     border-radius: 12px;
+     margin-bottom: 15px;
+   }
+</style>
+</head>
+<body>
+<div class="container">
+<h1>Glasgow East End </h1>
+<iframe
+     src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
+</iframe>
+<div class="club">
+<h3>Glasgow club east end </h3>
+<a href="https://www.glasgowlife.org.uk" target="_blank">Club website</a> |
+<a href="https://www.google.com/maps/place/Southside+Central,+Glasgow+G42+7NG/@55.8435788,-4.2630314,14.37z/data=!4m6!3m5!1s0x488846edb9b177d9:0x546c93d696407137!8m2!3d55.8368992!4d-4.2539412!16s%2Fm%2F0jky4wt?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+       View on map
+</a>
+</div>
+<a href="index.html">← Back to areas</a>
+</div>
+</body>
+</html>
