--- a/east-end.html
+++ b/east-end.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Glasgow east end | Go For It</title>
+<style>
+   body {
+     font-family: "Segoe UI", Arial, sans-serif;
+     background: #eef1f4;
+     padding: 40px;
+   }
+   .container {
+     max-width: 900px;
+     margin: auto;
+   }
+   iframe {
+     width: 100%;
+     height: 320px;
+     border-radius: 12px;
+     border: none;
+     margin-bottom: 30px;
+   }
+   .club {
+     background: white;
+     padding: 20px;
+     border-radius: 12px;
+     margin-bottom: 15px;
+   }
+</style>
+</head>
+<body>
+<div class="container">
+<h1>Glasgow east end </h1>
+<iframe
+     src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
+</iframe>
+<div class="club">
+<h3>Glasgow Club east end</h3>
+<a href="https://www.glasgowlife.org.uk" target="_blank">Club website</a> |
+<a href="https://www.google.com/maps/search/sports+clubs+near+polloksheilds/@55.871606,-4.3466614,12z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+       View on map
+</a>
+</div>
+<a href="index.html">← Back to areas</a>
+</div>
+</body>
+</html>
