--- a/index.html
+++ b/index.html
@@ -102,11 +102,10 @@
 </p>
 <h2>Your Area</h2>
 <div class="areas">
-<a href="area.html" class="area-box">Glasgow City Centre</a>
-<a href="area.html" class="area-box">Glasgow West End</a>
-<a href="area.html" class="area-box">Glasgow East End</a>
-<a href="area.html" class="area-box">Glasgow South Side</a>
-<a href="area.html" class="area-box">Glasgow North</a>
+<a href="city.html" class="area-box">Glasgow City Centre</a>
+<a href="west.html" class="area-box">Glasgow West End</a>
+<a href="east.html" class="area-box">Glasgow East End</a>
+<a href="south.html" class="area-box">Glasgow South Side</a>
 </div>
 </div>
 </body>
