--- a/west.html
+++ b/west.html
@@ -31,7 +31,13 @@
 <div class="container">
 <h1>Glasgow west end</h1>
 <iframe
-     src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
+ src="https://www.google.com/maps?q=Glasgow%20West%20End&output=embed"
+ width="100%"
+ height="350"
+ style="border:0; border-radius:12px;"
+ allowfullscreen=""
+ loading="lazy">
+</iframe>
 </iframe>
 <div class="club">
 <h3>Glasgow west end clubs</h3>
