--- a/south.html
+++ b/south.html
@@ -35,7 +35,7 @@
 </iframe>
 <div class="club">
 <h3>Glasgow club south side </h3>
-<a href="https://www.glasgowlife.org.uk" target="_blank">Club website</a> |
+<a href="https://glasgowlife.sportsuite.co.uk/campaigns/southside-central1" target="_blank">Club website</a> |
 <a href="https://www.google.com/maps/place/Southside+Central,+Glasgow+G42+7NG/@55.8435788,-4.2630314,14.37z/data=!4m6!3m5!1s0x488846edb9b177d9:0x546c93d696407137!8m2!3d55.8368992!4d-4.2539412!16s%2Fm%2F0jky4wt?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
        View on map
 </a>
