--- a/west.html
+++ b/west.html
@@ -41,7 +41,7 @@
 </iframe>
 <div class="club">
 <h3>Glasgow west end clubs</h3>
-<a href="https://www.glasgowlife.org.uk" target="_blank">Club website</a> |
+<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map" target="_blank">Club website</a> |
 <a href="https://www.google.com/maps/search/sports+clubs+west+end/@55.8717487,-4.2848599,14z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
        View on map
 </a>
