--- a/east.html
+++ b/east.html
@@ -35,7 +35,7 @@
 </iframe>
 <div class="club">
 <h3>Glasgow Club east end</h3>
-<a href="https://www.glasgowlife.org.uk" target="_blank">Club website</a> |
+<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map" target="_blank">Club website</a> |
 <a href="https://www.google.com/maps/search/sports+clubs+near+polloksheilds/@55.871606,-4.3466614,12z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
        View on map
 </a>
