--- a/city.html
+++ b/city.html
@@ -35,7 +35,7 @@
 </iframe>
 <div class="club">
 <h3>Glasgow Club City</h3>
-<a href="https://www.glasgowlife.org.uk" target="_blank">Club website</a> |
+<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map" target="_blank">Club website</a> |
 <a href="https://www.google.com/maps/search/Glasgow+Club+City" target="_blank">
        View on map
 </a>
