--- a/east.html
+++ b/east.html
@@ -33,13 +33,42 @@
 <iframe
      src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
 </iframe>
-<div class="club">
-<h3>Glasgow Club east end</h3>
-<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map" target="_blank">Club website</a> |
-<a href="https://www.google.com/maps/search/sports+clubs+near+polloksheilds/@55.871606,-4.3466614,12z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-       View on map
-</a>
-</div>
+<h2>Clubs in the East End</h2>
+<ul>
+<li>
+
+    Active Glasgow East —
+<a href="https://www.glasgowlife.org.uk/sport/venues" target="_blank">Website</a>
+</li>
+<li>
+
+    Carmyle United FC —
+<a href="https://www.carmyleunited.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+
+    Eastbank Karate —
+<a href="https://www.eastbankkarate.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+
+    Eastbank Netball Club —
+<a href="https://www.eastbanknetball.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+
+    Waterhouse Community Sports Hub —
+<a href="https://www.glasgowlife.org.uk/sport/venues/waterhouse" target="_blank">Website</a>
+</li>
+<li>
+
+    Easterhouse Phoenix Pickleball —
+<a href="https://www.facebook.com/EasterhousePhoenixPickleball/" target="_blank">Website</a>
+</li>
+</ul>
+Sport - Glasgow Life
+Glasgow Life Sport offers programmes and experiences which will help you experience the life-changing benefits of being active.
+ 
 <a href="index.html">← Back to areas</a>
 </div>
 </body>
