--- a/city.html
+++ b/city.html
@@ -33,13 +33,41 @@
 <iframe
      src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
 </iframe>
-<div class="club">
-<h3>Glasgow Club City</h3>
-<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map" target="_blank">Club website</a> |
-<a href="https://www.google.com/maps/search/Glasgow+Club+City" target="_blank">
-       View on map
-</a>
-</div>
+<h2>Clubs in the City Centre</h2>
+<ul>
+<li>
+   Kelvingrove Lawn Bowling Club —
+<a href="https://www.kelvingrovelbc.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+   PureGym Glasgow City Centre —
+<a href="https://www.puregym.com/gyms/glasgow/" target="_blank">Website</a>
+</li>
+<li>
+   Nuffield Health Fitness & Wellbeing —
+<a href="https://www.nuffieldhealth.com/gyms/glasgow-central" target="_blank">Website</a>
+</li>
+<li>
+   The Gym Group Glasgow Bothwell Street —
+<a href="https://www.thegymgroup.com/find-a-gym/glasgow-gyms/glasgow-bothwell-street/" target="_blank">Website</a>
+</li>
+<li>
+   Glasgow Club Gorbals —
+<a href="https://www.glasgowlife.org.uk/sport/venues/glasgow-club-gorbals" target="_blank">Website</a>
+</li>
+<li>
+   Strathclyde University Sports Centre —
+<a href="https://www.strath.ac.uk/strathclydesport/" target="_blank">Website</a>
+</li>
+<li>
+   JD Gyms Glasgow City —
+<a href="https://www.jdgyms.com/clubs/glasgow" target="_blank">Website</a>
+</li>
+<li>
+   Glasgow Green Hockey Pitches —
+<a href="https://www.glasgowlife.org.uk/sport/venues/glasgow-green" target="_blank">Website</a>
+</li>
+</ul>
 <a href="index.html">← Back to areas</a>
 </div>
 </body>
