--- a/west.html
+++ b/west.html
@@ -39,13 +39,37 @@
  loading="lazy">
 </iframe>
 </iframe>
-<div class="club">
-<h3>Glasgow west end clubs</h3>
-<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map" target="_blank">Club website</a> |
-<a href="https://www.google.com/maps/search/sports+clubs+west+end/@55.8717487,-4.2848599,14z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-       View on map
-</a>
-</div>
+<h2>Clubs in the West End</h2>
+<ul>
+<li>
+   Hillhead Hockey Club —
+<a href="https://www.hillheadhockeyclub.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+   GHK Hockey Club —
+<a href="https://www.ghkhockeyclub.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+   F45 Training West End —
+<a href="https://f45training.co.uk/studio/glasgowwestend/" target="_blank">Website</a>
+</li>
+<li>
+   Western Health & Racquet Club —
+<a href="https://www.whrc.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+   The Gym Group Glasgow West End —
+<a href="https://www.thegymgroup.com/find-a-gym/glasgow-gyms/glasgow-west-end/" target="_blank">Website</a>
+</li>
+<li>
+   Western Baths Club —
+<a href="https://www.westernbaths.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+   West End Road Runners —
+<a href="https://www.westendroadrunners.co.uk/" target="_blank">Website</a>
+</li>
+</ul>
 <a href="index.html">← Back to areas</a>
 </div>
 </body>
