--- a/south.html
+++ b/south.html
@@ -33,13 +33,52 @@
 <iframe
      src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
 </iframe>
-<div class="club">
-<h3>Glasgow club south side </h3>
-<a href="https://glasgowlife.sportsuite.co.uk/campaigns/southside-central1" target="_blank">Club website</a> |
-<a href="https://www.google.com/maps/place/Southside+Central,+Glasgow+G42+7NG/@55.8435788,-4.2630314,14.37z/data=!4m6!3m5!1s0x488846edb9b177d9:0x546c93d696407137!8m2!3d55.8368992!4d-4.2539412!16s%2Fm%2F0jky4wt?entry=ttu&g_ep=EgoyMDI2MDExMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-       View on map
-</a>
-</div>
+<h2>Clubs in the South Side</h2>
+<ul>
+<li>
+
+    Glasgow Club Gorbals —
+<a href="https://www.glasgowlife.org.uk/sport/venues/glasgow-club-gorbals" target="_blank">Website</a>
+</li>
+<li>
+
+    Bellahouston Sports Centre —
+<a href="https://www.glasgowlife.org.uk/sport/venues/bellahouston-sports-centre" target="_blank">Website</a>
+</li>
+<li>
+
+    Glasgow Life Southside Central —
+<a href="https://www.glasgowlife.org.uk/sport/venues/southside-central" target="_blank">Website</a>
+</li>
+<li>
+
+    Queen’s Park Tennis Club —
+<a href="https://clubspark.lta.org.uk/QueensParkTennisClub" target="_blank">Website</a>
+</li>
+<li>
+
+    Pollok United Football Club —
+<a href="https://www.pollokfc.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+
+    Southside Barbell Weightlifting Club —
+<a href="https://southsidebarbell.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+
+    Glasgow Skating Club (South Side) —
+<a href="https://www.glasgowskatingclub.co.uk/" target="_blank">Website</a>
+</li>
+<li>
+
+    David Lloyd Rouken Glen —
+<a href="https://www.davidlloyd.co.uk/clubs/rouken-glen/" target="_blank">Website</a>
+</li>
+</ul>
+Glasgow Club Gorbals - Glasgow Life
+This page has details about the facilities and activities available at Glasgow Club Gorbals
+ 
 <a href="index.html">← Back to areas</a>
 </div>
 </body>
