--- a/city.html
+++ b/city.html
@@ -30,9 +30,23 @@
 <body>
 <div class="container">
 <h1>Glasgow City Centre</h1>
-<iframe
-     src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
+<iframe src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed"
+  width="100%"
+  height="300"
+  style="border:0; border-radius:12px; margin-bottom:20px;"
+  loading="lazy">
 </iframe>
+   <div class="links-box">
+<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map"
+    target="_blank">
+   🏟️ View Glasgow Life sports venues
+</a>
+<br><br>
+<a href="https://www.google.com/maps/search/sports+clubs+Glasgow+City+Centre"
+    target="_blank">
+   📍 Find sports clubs near The City Centre
+</a>
+</div>
 <h2>Clubs in the City Centre</h2>
 <ul>
 <li>
