--- a/city.html
+++ b/city.html
@@ -3,28 +3,38 @@
 <head>
 <title>Glasgow City Centre | Go For It</title>
 <style>
-   body {
-     font-family: "Segoe UI", Arial, sans-serif;
-     background: #eef1f4;
-     padding: 40px;
-   }
-   .container {
-     max-width: 900px;
-     margin: auto;
-   }
-   iframe {
-     width: 100%;
-     height: 320px;
-     border-radius: 12px;
-     border: none;
-     margin-bottom: 30px;
-   }
-   .club {
-     background: white;
-     padding: 20px;
-     border-radius: 12px;
-     margin-bottom: 15px;
-   }
+body {
+ margin: 0;
+ font-family: 'Arial', sans-serif;
+ background: #f6f7f9;
+}
+.container {
+ max-width: 900px;
+ margin: auto;
+ padding: 16px;
+}
+h1, h2 {
+ color: #1f2937;
+}
+.links-box a {
+ display: block;
+ padding: 12px;
+ margin-bottom: 10px;
+ background: #e5e7eb;
+ border-radius: 10px;
+ text-decoration: none;
+ color: #111827;
+ font-weight: 600;
+}
+.links-box a:hover {
+ background: #d1d5db;
+}
+ul {
+ padding-left: 18px;
+}
+li {
+ margin-bottom: 10px;
+}
 </style>
 </head>
 <body>
