--- a/city.html
+++ b/city.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Glasgow City Centre | Go For It</title>
 <style>
-body {
- margin: 0;
- font-family: 'Arial', sans-serif;
- background: #f6f7f9;
-}
-.container {
- max-width: 900px;
- margin: auto;
- padding: 16px;
-}
-h1, h2 {
- color: #1f2937;
-}
-.links-box a {
- display: block;
- padding: 12px;
- margin-bottom: 10px;
- background: #e5e7eb;
- border-radius: 10px;
- text-decoration: none;
- color: #111827;
- font-weight: 600;
-}
-.links-box a:hover {
- background: #d1d5db;
-}
-ul {
- padding-left: 18px;
-}
-li {
- margin-bottom: 10px;
-}
+   body {
+     margin: 0;
+     font-family: Arial, sans-serif;
+     background: #f6f7f9;
+   }
+   .container {
+     max-width: 900px;
+     margin: auto;
+     padding: 16px;
+   }
+   h1, h2 {
+     color: #1f2937;
+   }
+   .links-box a {
+     display: block;
+     padding: 12px;
+     margin-bottom: 12px;
+   }
 </style>
 </head>
 <body>
