--- a/myaim.html
+++ b/myaim.html
@@ -1,1 +1,89 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Our Aim | Campaign for Kindness</title>
+<meta name="description" content="Helping girls keep playing sport and supporting those who have dropped out to feel confident starting again.">
+<style>
+   body {
+     font-family: Arial, Helvetica, sans-serif;
+     line-height: 1.6;
+     margin: 0;
+     padding: 0;
+     background-color: #f9f9f9;
+     color: #333;
+   }
+   .container {
+     max-width: 900px;
+     margin: 0 auto;
+     padding: 40px 20px;
+     background-color: #ffffff;
+   }
+   h1, h2 {
+     color: #2c2c2c;
+   }
+   h1 {
+     margin-bottom: 20px;
+   }
+   h2 {
+     margin-top: 40px;
+   }
+   p {
+     margin-bottom: 16px;
+   }
+   ul {
+     margin-left: 20px;
+     margin-bottom: 20px;
+   }
+</style>
+</head>
+<body>
+<div class="container">
+<h1>Our Aim</h1>
+<p>
+     Our aim is to help girls keep playing sport — and to support girls who have already dropped out to feel confident enough to start again.
+</p>
+<p>
+     Too many girls stop playing sport as they get older, not because they don’t enjoy it, but because of pressure, fear of judgement, low confidence, or negative past experiences. We want to change that.
+</p>
+<p>
+     This website exists to reduce the number of girls dropping out of sport by creating a kinder, more supportive space where sport feels safe, fun, and welcoming.
+</p>
+<h2>Why This Matters</h2>
+<p>
+     Sport should be for everyone — not just the most confident or competitive people.
+</p>
+<p>
+     Many girls leave sport because they feel:
+</p>
+<ul>
+<li>Nervous about being judged</li>
+<li>Afraid they are “not good enough”</li>
+<li>Embarrassed to start again after time away</li>
+<li>Put off by competitive or unwelcoming environments</li>
+</ul>
+<h2>Who This Website Is For</h2>
+<p>
+     This website is aimed at girls who have dropped out of sport, want to be active again, or feel anxious about taking part.
+</p>
+<p>
+     You don’t need to be fit. You don’t need experience. You don’t need confidence yet.
+</p>
+<h2>How We Help</h2>
+<p>
+     We help girls take small steps back into sport, build confidence at their own pace, and overcome fear of judgement or failure.
+</p>
+<p>
+     Our focus is on enjoyment, support, and feeling comfortable — not pressure or competition.
+</p>
+<h2>Our Message</h2>
+<p>
+     You are not bad at sport. You are not behind. You are not alone.
+</p>
+<p>
+     It’s okay to stop. It’s okay to take a break. And it’s always okay to start again.
+</p>
+</div>
+</body>
+</html>
