--- a/west.html
+++ b/west.html
@@ -38,7 +38,17 @@
  allowfullscreen=""
  loading="lazy">
 </iframe>
-</iframe>
+   <div class="links-box">
+<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map"
+    target="_blank">
+   🏟️ View Glasgow Life sports venues
+</a>
+<br><br>
+<a href="https://www.google.com/maps/search/sports+clubs+Glasgow+City+Centre"
+    target="_blank">
+   📍 Find sports clubs near The West End
+</a>
+</div>
 <h2>Clubs in the West End</h2>
 <ul>
 <li>
