--- a/west.html
+++ b/west.html
@@ -44,7 +44,7 @@
    🏟️ View Glasgow Life sports venues
 </a>
 <br><br>
-<a href="https://www.google.com/maps/search/sports+clubs+Glasgow+City+Centre"
+<a href="https://www.google.com/maps/search/sports+clubs+Glasgow+west+end/@55.8704094,-4.2644355,13z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI2MDIwNC4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D"
     target="_blank">
    📍 Find sports clubs near The West End
 </a>
