--- a/east.html
+++ b/east.html
@@ -30,9 +30,23 @@
 <body>
 <div class="container">
 <h1>Glasgow east end </h1>
-<iframe
-     src="https://www.google.com/maps?q=Glasgow%20City%20Centre&output=embed">
+<iframe src="https://www.google.com/maps/search/sports+clubs+near+East+end,+Westmuir+Street,+Glasgow/@55.8492959,-4.2280573,13.06z?entry=ttu&g_ep=EgoyMDI2MDIwNC4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D"
+  width="100%"
+  height="300"
+  style="border:0; border-radius:12px; margin-bottom:20px;"
+  loading="lazy">
 </iframe>
+   <div class="links-box">
+<a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map"
+    target="_blank">
+   🏟️ View Glasgow Life sports venues
+</a>
+<br><br>
+<a href="https://www.google.com/maps/search/sports+clubs+near+East+end,+Westmuir+Street,+Glasgow/@55.8492959,-4.2280573,13.06z?entry=ttu&g_ep=EgoyMDI2MDIwNC4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D"
+    target="_blank">
+   📍 Find sports clubs near Glasgow East End
+</a>
+</div>
 <h2>Clubs in the East End</h2>
 <ul>
 <li>
