--- a/south.html
+++ b/south.html
@@ -30,12 +30,13 @@
 <body>
 <div class="container">
 <h1>Glasgow south side </h1>
-<iframe src="https://www.google.com/maps/search/sports+clubs+south+side+/@55.8491908,-4.2904761,12.22z?entry=ttu&g_ep=EgoyMDI2MDIwNC4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D"
-  width="100%"
-  height="300"
-  style="border:0; border-radius:12px; margin-bottom:20px;"
-  loading="lazy">
-</iframe>
+<iframe
+ src="https://www.google.com/maps?q=Glasgow%20South%20Side&output=embed"
+ width="100%"
+ height="300"
+ style="border:0; border-radius:12px; margin-bottom:20px;"
+ loading="lazy">
+</iframe
    <div class="links-box">
 <a href="https://www.glasgowlife.org.uk/venue-finder?channel=Sport#venue-map"
     target="_blank">
