--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 <div class="container">
 <h1>Go For It</h1>
 <p class="intro">
-Find sports clubs and facilities in your local area.  My project is a website designed to help girls find local sports opportunities and feel more confident about taking part in sport. It focuses on supporting girls who have dropped out of sport or feel nervous about starting again.
-The aim of the project is to reduce the number of girls leaving sport by creating a supportive and welcoming space that makes sport feel less intimidating. The website encourages girls to take small steps at their own pace and reminds them that they don’t need to be confident or experienced to get involved. Overall, the project promotes sport as something positive, inclusive, and enjoyable for everyone.
+Find sports clubs and facilities in your local area.
+This website is to help girls and women start sports or get back into it after dropping out!
 </p>
  <div class="button-container">
 <a href="myaim.html" class="my-aim-btn">My Aim</a>
